--- a/payment1.html
+++ b/payment1.html
@@ -11,7 +11,7 @@
            * {
             padding: 0;
             margin: 0;
-            font-family: cursive;
+            font-family: 'Times New Roman', Times, serif;
             scroll-behavior: smooth;
         }
 
