--- a/purchase.html
+++ b/purchase.html
@@ -9,7 +9,7 @@
     }
 
     body {
-      font-family: cursive;
+      font-family: 'Times New Roman', Times, serif;
       margin: 0;
       padding: 20px;
     }
