--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
       * {
         margin: 0;
         padding: 0;
-        font-family: cursive;
+        font-family: 'Times New Roman', Times, serif;
       }
       body {
         background: #efeded;
