--- a/transferSuccessful.html
+++ b/transferSuccessful.html
@@ -12,7 +12,7 @@
    * {
             margin: 0;
             padding: 0;
-            font-family: cursive;
+            font-family: 'Times New Roman', Times, serif;
         }
         .up {
             width: 98%;
